# storage/api-docs/api-docs.json
@@ -30,22 +30,54 @@
                     "apply"
                 ],
                 "summary": "Create a new application",
-                "operationId": "b9a268f05376b721a77909e82c159dbd",
+                "operationId": "e486c5b96567670b7a60525345406393",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "title": {
+                                    "first_name": {
                                         "type": "string",
-                                        "example": "Sample Title"
+                                        "example": "jane"
                                     },
-                                    "content": {
+                                    "last_name": {
                                         "type": "string",
-                                        "example": "Sample content"
+                                        "example": "doe"
                                     },
-                                    "author_id": {
+                                    "contact_person": {
+                                        "type": "string",
+                                        "example": "guardian"
+                                    },
+                                    "contact_details": {
+                                        "type": "string",
+                                        "example": "guardian@email.com"
+                                    },
+                                    "combination": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "gender": {
+                                        "type": "string",
+                                        "example": "female"
+                                    },
+                                    "father": {
+                                        "type": "string",
+                                        "example": "papa"
+                                    },
+                                    "mother": {
+                                        "type": "string",
+                                        "example": "mama"
+                                    },
+                                    "city": {
+                                        "type": "string",
+                                        "example": "kigali"
+                                    },
+                                    "dob": {
+                                        "type": "string",
+                                        "example": "2024-03-15 16:25:04"
+                                    },
+                                    "school": {
                                         "type": "integer",
                                         "example": 1
                                     }
@@ -174,6 +206,84 @@
                     },
                     "404": {
                         "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/api/v1/signin": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Sign in into my account",
+                "operationId": "bbac71dac7e36f82e20620c14e1dfaf9",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "my@email.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "secret"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Signed in successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/v1/signup": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Create a free account",
+                "operationId": "610a41728b3494220ce9dd3bb242586a",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "my name"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "my@email.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "secret"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Signed up successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
@@ -1266,6 +1376,10 @@
         {
             "name": "apply",
             "description": "Operations related to student application"
+        },
+        {
+            "name": "auth",
+            "description": "Authenticate user"
         },
         {
             "name": "calendar",
